--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,8 @@ body {
 }
 
 .header {
-  height: 100vh;
-  background: linear-gradient(180deg, #cadbeb 0%, rgba(235, 235, 235, 0) 100%);
+  min-height: 100vh;
+  position: relative;
 }
 .header .header__top {
   padding: 40px 0;
@@ -33,4 +33,46 @@ body {
   border-radius: 30px;
   background-color: #000;
   color: #fff;
+  text-transform: uppercase;
+}
+.header .header__content .title {
+  letter-spacing: 7px;
+  font-size: 210px;
+  font-weight: 700;
+  position: absolute;
+  padding-top: 105px;
+}
+.header .header__content .title .title--pod {
+  position: relative;
+  z-index: -1;
+}
+.header .header__content .title .title--s {
+  display: inline-block;
+  transform: translate(15px, 63px);
+}
+.header .header__content .title .title--m {
+  display: inline-block;
+  transform: translate(-60px, 293px);
+}
+.header .header__content .title .title--ax {
+  display: inline-block;
+  position: relative;
+  transform: translate(-138px, 425px);
+  z-index: -1;
+}
+.header .header__content .header__content-images {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+.header .header__content .header__content-images::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: linear-gradient(180deg, #cadbeb 0%, rgba(235, 235, 235, 0) 100%);
+  z-index: -2;
 }/*# sourceMappingURL=style.css.map */
