--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,8 +11,9 @@ body {
     margin: 0 auto;
 }
 .header {
-    height: 100vh;
-    background: linear-gradient(180deg, #cadbeb 0%, rgba(235, 235, 235, 0) 100%);
+    min-height: 100vh;
+    position: relative;
+
     .header__top {
         padding: 40px 0;
         display: flex;
@@ -34,6 +35,53 @@ body {
             border-radius: 30px;
             background-color: #000;
             color: #fff;
+            text-transform: uppercase;
+        }
+    }
+    .header__content {
+        .title {
+            letter-spacing: 7px;
+            font-size: 210px;
+            font-weight: 700;
+            position: absolute;
+            padding-top: 105px;
+            .title--air {
+            }
+            .title--pod {
+                position: relative;
+                z-index: -1;
+            }
+            .title--s {
+                display: inline-block;
+                transform: translate(15px, 63px);
+            }
+            .title--m {
+                display: inline-block;
+                transform: translate(-60px, 293px);
+            }
+            .title--ax {
+                display: inline-block;
+                position: relative;
+                transform: translate(-138px, 425px);
+                z-index: -1;
+            }
+        }
+        .header__content-images {
+            display: flex;
+            justify-content: center;
+            padding-bottom: 50px;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                background: linear-gradient(180deg, #cadbeb 0%, rgba(235, 235, 235, 0) 100%);
+                z-index: -2;
+            }
         }
     }
 }
