--- a/styles/style.css
+++ b/styles/style.css
@@ -75,4 +75,57 @@ body {
   width: 100%;
   background: linear-gradient(180deg, #cadbeb 0%, rgba(235, 235, 235, 0) 100%);
   z-index: -2;
+}
+
+.choose-color {
+  padding: 45px 0 180px;
+  text-align: center;
+}
+.choose-color .choose-color__title {
+  font-weight: 700;
+  font-size: 36px;
+  margin: 0 auto 20px;
+}
+.choose-color .choose-color__text {
+  max-width: 555px;
+  margin: 0 auto 80px;
+}
+.choose-color .choose-color__list {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+.choose-color .choose__color-btn {
+  border: 1px solid grey;
+  border-radius: 20px;
+  padding: 50px 55px;
+}
+
+.composition {
+  margin-bottom: 180px;
+}
+.composition .composition__title {
+  font-weight: 700;
+  margin-bottom: 20px;
+  font-size: 64px;
+  text-align: center;
+}
+.composition .composition__text {
+  text-align: center;
+  max-width: 653px;
+  margin: 0 auto 40px;
+}
+.composition .composition__inner {
+  display: flex;
+  justify-content: center;
+  gap: 150px;
+}
+.composition .composition__inner .composition__inner-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 15px;
+}
+.composition .composition__inner .composition__inner-text p {
+  width: 230px;
 }/*# sourceMappingURL=style.css.map */
