--- a/styles/style.scss
+++ b/styles/style.scss
@@ -85,3 +85,60 @@ body {
         }
     }
 }
+
+.choose-color {
+    padding: 45px 0 180px;
+    text-align: center;
+
+    .choose-color__title {
+        font-weight: 700;
+        font-size: 36px;
+        margin: 0 auto 20px;
+    }
+    .choose-color__text {
+        max-width: 555px;
+        margin: 0 auto 80px;
+    }
+    .choose-color__list {
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+    }
+
+    .choose__color-btn {
+        border: 1px solid grey;
+        border-radius: 20px;
+        padding: 50px 55px;
+    }
+}
+
+.composition {
+    margin-bottom: 180px;
+    .composition__title {
+        font-weight: 700;
+        margin-bottom: 20px;
+        font-size: 64px;
+        text-align: center;
+    }
+
+    .composition__text {
+        text-align: center;
+        max-width: 653px;
+        margin: 0 auto 40px;
+    }
+    .composition__inner {
+        display: flex;
+        justify-content: center;
+        gap: 150px;
+
+        .composition__inner-text {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: 15px;
+            p {
+                width: 230px;
+            }
+        }
+    }
+}
