--- a/styles/style.css
+++ b/styles/style.css
@@ -128,4 +128,73 @@ body {
 }
 .composition .composition__inner .composition__inner-text p {
   width: 230px;
+}
+
+.case {
+  padding: 80px 0 100px;
+  background: #fafafa;
+  text-align: center;
+}
+.case .case__title {
+  font-weight: 700;
+  margin-bottom: 20px;
+  font-size: 64px;
+  letter-spacing: 2px;
+}
+.case .case__text {
+  max-width: 825px;
+  margin: 0 auto 40px;
+}
+.case img {
+  margin: 0 auto;
+}
+.case .energy__title {
+  font-weight: 700;
+  margin: 160px auto 40px;
+  font-size: 64px;
+  letter-spacing: 2px;
+}
+.case .energy__num {
+  font-weight: 700;
+  font-size: 210px;
+  margin-bottom: 40px;
+}
+.case .energy__text {
+  max-width: 403px;
+  margin: 0 auto;
+}
+
+.audio {
+  background-image: url(../assets/images/audio-full-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+.audio .audio__inner {
+  min-height: 220vh;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+.audio .audio__inner .audio__box {
+  color: #fff;
+  text-align: center;
+  padding-bottom: 30vh;
+}
+.audio .audio__inner .audio__text {
+  width: 300px;
+  margin-bottom: 20px;
+}
+.audio .audio__inner .btn {
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-color: #fff;
+  border-radius: 30px;
+  padding: 15px 58px;
+}
+
+.footer {
+  padding: 50px 0 40px;
+  background-color: #000;
 }/*# sourceMappingURL=style.css.map */
