--- a/styles/style.scss
+++ b/styles/style.scss
@@ -142,3 +142,105 @@ body {
         }
     }
 }
+.case {
+    padding: 80px 0 100px;
+    background: #fafafa;
+    text-align: center;
+
+    .case__title {
+        font-weight: 700;
+        margin-bottom: 20px;
+        font-size: 64px;
+
+        letter-spacing: 2px;
+    }
+    .case__text {
+        max-width: 825px;
+        margin: 0 auto 40px;
+    }
+
+    img {
+        margin: 0 auto;
+    }
+
+    .energy__title {
+        font-weight: 700;
+        margin: 160px auto 40px;
+        font-size: 64px;
+        letter-spacing: 2px;
+    }
+    .energy__num {
+        font-weight: 700;
+        font-size: 210px;
+        margin-bottom: 40px;
+    }
+    .energy__text {
+        max-width: 403px;
+        margin: 0 auto;
+    }
+}
+
+.audio {
+    background-image: url(../assets/images/audio-full-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+
+    // &::before {
+    //     content: "";
+    //     position: absolute;
+    //     background-image: url(../assets/images/audio-bg.jpg);
+    //     background-repeat: no-repeat;
+    //     background-size: cover;
+    //     background-position: top center;
+    //     top: 0;
+    //     left: 0;
+    //     right: 0;
+    //     bottom: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     z-index: -2;
+    // }
+
+    // &::after {
+    //     content: "";
+    //     position: absolute;
+    //     background-image: url(../assets/images/sound.png);
+    //     background-position: bottom center;
+    //     background-size: cover;
+    //     bottom: -250px;
+    //     width: 100%;
+    //     left: 0;
+    //     right: 0;
+    //     height: 150vh;
+    //     background-repeat: no-repeat;
+    //     z-index: -1;
+    // }
+    .audio__inner {
+        min-height: 220vh;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        .audio__box {
+            color: #fff;
+            text-align: center;
+            padding-bottom: 30vh;
+        }
+        .audio__text {
+            width: 300px;
+            margin-bottom: 20px;
+        }
+        .btn {
+            margin-top: 20px;
+            text-transform: uppercase;
+            font-weight: 700;
+            background-color: #fff;
+            border-radius: 30px;
+            padding: 15px 58px;
+        }
+    }
+}
+.footer {
+    padding: 50px 0 40px;
+    background-color: #000;
+}
