--- a/styles/style.scss
+++ b/styles/style.scss
@@ -224,7 +224,7 @@ body {
         .audio__box {
             color: #fff;
             text-align: center;
-            padding-bottom: 30vh;
+            padding-bottom: 50vh;
         }
         .audio__text {
             width: 300px;
@@ -241,6 +241,23 @@ body {
     }
 }
 .footer {
+    text-align: center;
+    font-weight: 700;
     padding: 50px 0 40px;
     background-color: #000;
+    color: #fff;
+
+    .footer__text {
+        margin: 20px 0;
+    }
+    .footer__logo {
+        width: 30px;
+        margin: 0 auto 80px;
+    }
+    .footer__list {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+    }
 }
