--- a/styles/style.css
+++ b/styles/style.css
@@ -117,8 +117,9 @@ body {
 }
 .composition .composition__inner {
   display: flex;
-  justify-content: center;
-  gap: 150px;
+  max-width: 625px;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 .composition .composition__inner .composition__inner-text {
   display: flex;
@@ -213,4 +214,70 @@ body {
   align-items: center;
   justify-content: center;
   gap: 20px;
+}
+
+@media (max-width: 1200px) {
+  .choose-color__list {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 768px) {
+  .choose-color {
+    padding-bottom: 60px;
+  }
+  .choose-color .choose-color__list {
+    gap: 16px;
+  }
+  .composition {
+    margin-bottom: 60px;
+  }
+  .composition .composition__title {
+    font-size: 36px;
+  }
+  .case {
+    padding: 60px 0;
+  }
+  .case .case__title {
+    font-size: 42px;
+    letter-spacing: 0;
+  }
+  .case .energy__title {
+    font-size: 42px;
+    letter-spacing: 0;
+    margin-top: 60px;
+    margin-bottom: 20px;
+  }
+  .case .energy__num {
+    font-size: 120px;
+    margin-bottom: 20px;
+  }
+  .footer .footer__logo {
+    margin-bottom: 45px;
+  }
+  .footer .footer__list {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 560px) {
+  .choose-color {
+    padding-bottom: 45px;
+  }
+  .choose-color .choose-color__text {
+    margin-bottom: 40px;
+  }
+  .composition .composition__inner {
+    flex-direction: column;
+    align-items: center;
+  }
+  .composition .composition__inner .composition__inner-text {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+  .composition .composition__inner .composition__inner-text p {
+    width: 100%;
+  }
+  .case .case__title {
+    font-size: 36px;
+    letter-spacing: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
