--- a/styles/style.scss
+++ b/styles/style.scss
@@ -40,6 +40,8 @@ body {
     }
     .header__content {
         .title {
+            max-width: 1200px;
+
             letter-spacing: 7px;
             font-size: 210px;
             font-weight: 700;
@@ -62,7 +64,7 @@ body {
             .title--ax {
                 display: inline-block;
                 position: relative;
-                transform: translate(-138px, 425px);
+                transform: translate(895px, 175px);
                 z-index: -1;
             }
         }
@@ -103,6 +105,7 @@ body {
         display: flex;
         justify-content: center;
         gap: 40px;
+        flex-wrap: wrap;
     }
 
     .choose__color-btn {
@@ -262,9 +265,48 @@ body {
     }
 }
 
-@media (max-width: 1200px) {
-    .choose-color__list {
-        flex-wrap: wrap;
+@media (max-width: 1238px) {
+    .header {
+        .header__content {
+            .title {
+                position: relative;
+                padding-top: 20px;
+                width: 100%;
+                text-align: center;
+                font-size: 110px;
+                .title--air {
+                }
+                .title--pod {
+                    position: relative;
+                    z-index: -1;
+                }
+                .title--s {
+                    display: inline-block;
+                    transform: none;
+                }
+                .title--m {
+                    display: inline-block;
+                    transform: none;
+                    margin-left: 20px;
+                }
+                .title--ax {
+                    transform: none;
+                    z-index: 0;
+                }
+            }
+        }
+        .choose-color__list {
+            flex-wrap: wrap;
+        }
+    }
+}
+@media (max-width: 880px) {
+    .header {
+        .header__content {
+            .title {
+                font-size: 70px;
+            }
+        }
     }
 }
 @media (max-width: 768px) {
@@ -312,7 +354,24 @@ body {
     }
 }
 @media (max-width: 560px) {
+    .header {
+        .header__content {
+            .title {
+                font-size: 36px;
+            }
+        }
+        .menu {
+            .menu__list {
+                gap: 0 14px;
+            }
+            .menu__btn {
+                padding: 8px 28px;
+            }
+        }
+    }
+
     .choose-color {
+        padding-top: 0;
         padding-bottom: 45px;
 
         .choose-color__text {
