--- a/styles/style.scss
+++ b/styles/style.scss
@@ -358,6 +358,7 @@ body {
         .header__content {
             .title {
                 font-size: 36px;
+                letter-spacing: 0;
             }
         }
         .menu {
